force-app/main/default/objects/Financials__c/Financials__c.object-meta.xml
<CustomObject>
    <description>Stores the billing rate, recurring revenue and billed units for each service (service plan or application) for each account</description>
    <label>Financials</label>
    <nameField>
        <displayFormat>FIN-{0}</displayFormat>
        <label>Financials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>