force-app/main/default/objects/Financials__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account that&apos;s actually invoiced; may be an affiliate of the Parent Account</description>
    <inlineHelpText>Account that&apos;s actually invoiced; may be an affiliate of the Parent Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>