force-app/main/default/objects/Financials__c/fields/ARPU__c.field-meta.xml
<CustomField>
    <fullName>ARPU__c</fullName>
    <description>The rate at which services are billed. Typically &quot;per unit&quot;, but some services are applied at the account level.</description>
    <inlineHelpText>The rate at which services are billed. Typically &quot;per unit&quot;, but some services are applied at the account level.</inlineHelpText>
    <label>ARPU</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>