force-app/main/default/objects/Financials__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Services fall into different categories</description>
    <inlineHelpText>Service Plan = the service plan that a unit subscribes to
Base Application = an application that could be part of a service plan, but that is billed a la carte
Premium Application = an application that is never part of a service plan</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base Application</fullName>
                <default>true</default>
                <label>Base Application</label>
            </value>
            <value>
                <fullName>Premium Application</fullName>
            </value>
            <value>
                <fullName>Service Plan</fullName>
            </value>
            <value>
                <fullName>Billing Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>