force-app/main/default/objects/Financials__c/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <description>Net revenue for this service for this month</description>
    <inlineHelpText>Net revenue for this service for this month</inlineHelpText>
    <label>Net Revenue</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>