force-app/main/default/objects/Financials__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>the unique ID used by Oracle or NGB to invoice the customer</description>
    <inlineHelpText>the unique ID used by Oracle or NGB to invoice the customer</inlineHelpText>
    <label>Oracle ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>