force-app/main/default/objects/Financials__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The parent account, if this account has a parent; otherwise, this account</description>
    <inlineHelpText>The parent account, if this account has a parent; otherwise, this account</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financials (Parent Account)</relationshipLabel>
    <relationshipName>Financials2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>