force-app/main/default/objects/Financials__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platform that a service is associated with.</description>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT</fullName>
            </value>
            <value>
                <fullName>HAZMAT</fullName>
            </value>
            <value>
                <fullName>MCP100S</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>OEX</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>3rd Party Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>