force-app/main/default/objects/Financials__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>the various services that are offered</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Mapping</fullName>
            </value>
            <value>
                <fullName>Advanced Workflow</fullName>
            </value>
            <value>
                <fullName>ALK Copilot</fullName>
            </value>
            <value>
                <fullName>Automated Arrival/Departure</fullName>
            </value>
            <value>
                <fullName>CDS</fullName>
            </value>
            <value>
                <fullName>CER Basic</fullName>
            </value>
            <value>
                <fullName>CER FCW/FTV</fullName>
            </value>
            <value>
                <fullName>CER-Over Speed Event</fullName>
            </value>
            <value>
                <fullName>CER Premium</fullName>
            </value>
            <value>
                <fullName>Compliance Plan - Satellite</fullName>
            </value>
            <value>
                <fullName>Compliance Plan - Terrestrial</fullName>
            </value>
            <value>
                <fullName>CoPilot Route Sync</fullName>
            </value>
            <value>
                <fullName>Core Plan - Satellite</fullName>
            </value>
            <value>
                <fullName>Core Plan - Terrestrial</fullName>
            </value>
            <value>
                <fullName>Data Plan</fullName>
            </value>
            <value>
                <fullName>Define Macro Message</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>DVIR</fullName>
            </value>
            <value>
                <fullName>EOBR Plan - Satellite</fullName>
            </value>
            <value>
                <fullName>EOBR Plan - Terrestrial</fullName>
            </value>
            <value>
                <fullName>Fleet Advisor Service</fullName>
            </value>
            <value>
                <fullName>Frequent MIPR</fullName>
            </value>
            <value>
                <fullName>HAZMAT Recurring</fullName>
            </value>
            <value>
                <fullName>HOS</fullName>
            </value>
            <value>
                <fullName>ICS</fullName>
            </value>
            <value>
                <fullName>Maptuit Compliance</fullName>
            </value>
            <value>
                <fullName>Maptuit Fuel</fullName>
            </value>
            <value>
                <fullName>Maptuit Hazmat</fullName>
            </value>
            <value>
                <fullName>Maptuit Navigo</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>