force-app/main/default/objects/Financials__c/fields/Units_for_Total_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Units_for_Total_ARPU__c</fullName>
    <formula>IF(  ISPICKVAL( Category__c , &quot;Service Plan&quot;) ,  Billed_Units__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units for Total ARPU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>