force-app/main/default/objects/Financials__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Account__c</columns>
    <columns>ARPU__c</columns>
    <columns>Oracle_ID__c</columns>
    <columns>Platform__c</columns>
    <columns>Statement_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>