force-app/main/default/objects/Financials__c/listViews/All_Services.listView-meta.xml
<ListView>
    <fullName>All_Services</fullName>
    <columns>NAME</columns>
    <columns>Statement_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Service__c</columns>
    <columns>Platform__c</columns>
    <columns>Billed_Units__c</columns>
    <columns>Net_Revenue__c</columns>
    <columns>ARPU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Services</label>
    <language>en_US</language>
</ListView>